[package]
name = "foreground-cron"
description = "single binary to run jobs from crontab in foreground"
homepage = "https://github.com/arve0/foreground-cron"
version = "0.1.0"
authors = ["Arve Seljebu <arve.seljebu@gmail.com>"]
edition = "2018"
license = "MIT"
exclude = [
    ".vscode/*",
    "crontab",
]

[dependencies]
error-chain = "*"
job_scheduler = "*"
