[package]
name = "foreground-cron"
description = "single binary to run jobs from crontab in foreground"
homepage = "https://github.com/arve0/foreground-cron"
version = "0.1.1"
authors = ["Arve Seljebu <arve.seljebu@gmail.com>"]
edition = "2018"
license = "MIT"
exclude = [
    ".vscode/*",
    "crontab",
]

[dependencies]
error-chain = "*"
job_scheduler = "*"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
